added dishes folder and pizza.html

--- a/dishes/pizza.html
+++ b/dishes/pizza.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Quattro Formaggio Pizza</title>
 </head>
 <body>
-    <h1>Recipes</h1>
-    <a href="/dishes/pizza.html">Quattro Formaggio Pizza</a>
+    <h1>Quattro Formaggio Pizza</h1>
 </body>
 </html>
