added content in pizza.html

--- a/dishes/pizza.html
+++ b/dishes/pizza.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quattro Formaggio Pizza</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <h1>Quattro Formaggio Pizza</h1>
-</body>
+    <img src="./assets/pizza.jpg" alt="pizza" height="400" width="600" />
+    <h3>Description</h3>
+    <p>
+      Quattro formaggi is a variety of Italian pizza topped with a combination
+      of four kinds of cheese, as the name suggests. Traditionally, the cheeses
+      should be mozzarella and three other, local cheeses, depending on the
+      region, such as Gorgonzola, Fontina, and Parmigiano-Reggiano.
+    </p>
+    <p>
+      Optionally, the pizza can be further enriched with the addition of basil
+      and tomato. The combination of cheeses gives the pizza an unusual, unique
+      flavor that is loved by cheese-aficionados all over the world.
+    </p>
+    <h3>Ingredients:</h3>
+    <ul>
+      <li>Flour</li>
+      <li>Mozzarel</li>
+      <li>Fontina</li>
+      <li>Grana Padano</li>
+      <li>Gorgonzola</li>
+      <li>Tomato sauce</li>
+      <li>Basil</li>
+      <li>Cherry tommato</li>
+    </ul>
+    <h3>Steps:</h3>
+        <ol>
+            <li>First, put the flour, salt and yeast in a bowl making sure to put the salt and yeast at opposite sides</li>
+            <li>Add the water and olive oil and mix together to form a rough dough</li>
+            <li>Shape the dough into a ball then knead on a lightly floured surface for around 10 minutes until the dough is smooth and elastic</li>
+            <li>After kneading shape the dough into a ball and place in a large clean bowl lightly greased with olive oil. Cover with plastic wrap and sit the dough in a dry warm place for 2-3 hours or until tripled in size</li>
+            <li>Once the dough has risen, knock the air out by pressing down on it with your fist. Divide in half and shape into two separate balls ready for baking</li>
+            <li>You can either shape the dough with your hands or roll it out. Place it on a tray sprinkled with semolina or flour</li>
+            <li>Spread the base with tomato sauce then top with cheese</li>
+            <li>Bake the pizza in a pre-heated oven until golden, bubbling and melted. Let it sit for 5 minutes before cutting</li>
+            <li>Decorate with basil and cherry tomatto</li>
+        </ol>
+        <a href="/">Go back to the home page</a>
+  </body>
 </html>
