added two html pages, moved asset folder to root folder,minor html fixes.

--- a/dishes/pizza.html
+++ b/dishes/pizza.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>Quattro Formaggio Pizza</h1>
-    <img src="./assets/pizza.jpg" alt="pizza" height="400" width="600" />
+    <img src="/assets/pizza.jpg" alt="pizza" height="400" width="600" />
     <h3>Description</h3>
     <p>
       Quattro formaggi is a variety of Italian pizza topped with a combination
