--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <a href="/dishes/pizza.html">Quattro Formaggio Pizza</a>
+    <ul>
+        <li><a href="/dishes/pizza.html">Quattro Formaggio</a></li>
+        <li><a href="/dishes/braciola.html">Braciola</a></li>
+        <li><a href="/dishes/cannoli.html">Cannoli</a></li>
+    </ul>
 </body>
 </html>
